# sosdb-grafana

./: .gitignore  COPYING  Makefile.am  README.md  aclocal.m4  autogen.sh  configure.ac
grafana/: Makefile.am  analysis.py  models_baler.py  models_sos.py  urls.py  views.py
sosds/: Makefile.am  package.json
sosds/spec/: datasource_spec.js
sosds/src/: datasource.js  module.js  plugin.json  query_ctrl.js
sosds/src/partials/: query.editor.html
sosgui/: Makefile.am  grafana_settings.py
